--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "presearch-react-components": "0.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
+  },
+  "engines": {
+    "npm": "6.5.0",
+    "node": "10.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
