--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "presearch-react-components": "0.0.2",
     "react": "^16.6.3",
+    "react-components": "git+ssh://git@github.com/PresearchOfficial/react-components.git",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
