--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-fancy-project-test",
   "version": "0.1.0",
   "private": true,
+  "main": "build/index.js",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
