--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "react-fancy-project-test",
   "version": "0.1.0",
   "private": true,
-  "main": "build/index.js",
   "dependencies": {
+    "qs": "^6.6.0",
     "react": "^16.6.3",
+    "react-components": "git+ssh://git@github.com/PresearchOfficial/react-components.git",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "universal-cookie": "^3.0.7"
   },
   "engines": {
     "npm": "6.5.0",
